--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
   "dependencies": {
     "axios": "^1.3.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/google.maps": "^3.51.1",
+    "@faker-js/faker": "^7.6.0",
+    "typescript": "^4.9.5"
+  }
 }
